Initial exploration of data. Examined feature ranges and frequencies.

--- a/ml_with_a_heart/notebooks/exploratory_data_analysis.ipynb
+++ b/ml_with_a_heart/notebooks/exploratory_data_analysis.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "4                      145                        0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,13 +331,265 @@
        "4     oyt4ek                      0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_y.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Check for NaNs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_id                              False\n",
+       "slope_of_peak_exercise_st_segment       False\n",
+       "thal                                    False\n",
+       "resting_blood_pressure                  False\n",
+       "chest_pain_type                         False\n",
+       "num_major_vessels                       False\n",
+       "fasting_blood_sugar_gt_120_mg_per_dl    False\n",
+       "resting_ekg_results                     False\n",
+       "serum_cholesterol_mg_per_dl             False\n",
+       "oldpeak_eq_st_depression                False\n",
+       "sex                                     False\n",
+       "age                                     False\n",
+       "max_heart_rate_achieved                 False\n",
+       "exercise_induced_angina                 False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_x.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Good, none of the data are missing but there might still be issues to resolve."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Set dtype to match DrivenData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool_cols = ['sex', 'fasting_blood_sugar_gt_120_mg_per_dl', 'exercise_induced_angina']\n",
+    "float_cols = ['oldpeak_eq_st_depression']\n",
+    "categorical_cols = ['thal']\n",
+    "int_cols = ['slope_of_peak_exercise_st_segment', 'resting_blood_pressure', 'chest_pain_type', 'num_major_vessels', 'resting_ekg_results', 'serum_cholesterol_mg_per_dl', 'age', 'max_heart_rate_achieved']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 180 entries, 0 to 179\n",
+      "Data columns (total 14 columns):\n",
+      "patient_id                              180 non-null object\n",
+      "slope_of_peak_exercise_st_segment       180 non-null int64\n",
+      "thal                                    180 non-null object\n",
+      "resting_blood_pressure                  180 non-null int64\n",
+      "chest_pain_type                         180 non-null int64\n",
+      "num_major_vessels                       180 non-null int64\n",
+      "fasting_blood_sugar_gt_120_mg_per_dl    180 non-null int64\n",
+      "resting_ekg_results                     180 non-null int64\n",
+      "serum_cholesterol_mg_per_dl             180 non-null int64\n",
+      "oldpeak_eq_st_depression                180 non-null float64\n",
+      "sex                                     180 non-null int64\n",
+      "age                                     180 non-null int64\n",
+      "max_heart_rate_achieved                 180 non-null int64\n",
+      "exercise_induced_angina                 180 non-null int64\n",
+      "dtypes: float64(1), int64(11), object(2)\n",
+      "memory usage: 19.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_x[bool_cols].astype(bool)\n",
+    "df_x[float_cols].astype(float)\n",
+    "df_x[categorical_cols].astype('category')\n",
+    "df_x[int_cols].astype(int)\n",
+    "df_x.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Check the ranges and frequencies of the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========================\n",
+      "slope_of_peak_exercise_st_segment\n",
+      "min: 1\n",
+      "max: 3\n",
+      "mean: 1.55\n",
+      "=========================\n",
+      "resting_blood_pressure\n",
+      "min: 94\n",
+      "max: 180\n",
+      "mean: 131.3111111111111\n",
+      "=========================\n",
+      "chest_pain_type\n",
+      "min: 1\n",
+      "max: 4\n",
+      "mean: 3.1555555555555554\n",
+      "=========================\n",
+      "num_major_vessels\n",
+      "min: 0\n",
+      "max: 3\n",
+      "mean: 0.6944444444444444\n",
+      "=========================\n",
+      "resting_ekg_results\n",
+      "min: 0\n",
+      "max: 2\n",
+      "mean: 1.05\n",
+      "=========================\n",
+      "serum_cholesterol_mg_per_dl\n",
+      "min: 126\n",
+      "max: 564\n",
+      "mean: 249.2111111111111\n",
+      "=========================\n",
+      "age\n",
+      "min: 29\n",
+      "max: 77\n",
+      "mean: 54.81111111111111\n",
+      "=========================\n",
+      "max_heart_rate_achieved\n",
+      "min: 96\n",
+      "max: 202\n",
+      "mean: 149.48333333333332\n"
+     ]
+    }
+   ],
+   "source": [
+    "# integer values\n",
+    "for col in df_x[int_cols].columns:\n",
+    "    print('='*25)\n",
+    "    print(col)\n",
+    "    print('min: {}'.format(df_x[col].min()))\n",
+    "    print('max: {}'.format(df_x[col].max()))\n",
+    "    print('mean: {}'.format(df_x[col].mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These integer columns have different ranges but are all positive. I think it would be good to scale these values using the MaxAbsScaler() from scikit-learn which uses the maximum absolute value of the data to set the scale. This keeps all data within [-1, 1] while preserving 0. It also keeps all values the same sign after scaling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========================\n",
+      "oldpeak_eq_st_depression\n",
+      "min: 0.0\n",
+      "max: 6.2\n",
+      "mean: 1.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "# float values\n",
+    "for col in df_x[float_cols].columns:\n",
+    "    print('='*25)\n",
+    "    print(col)\n",
+    "    print('min: {}'.format(df_x[col].min()))\n",
+    "    print('max: {}'.format(df_x[col].max()))\n",
+    "    print('mean: {}'.format(df_x[col].mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These values can also be scaled using the MaxAbsScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========================\n",
+      "thal\n",
+      "normal               98\n",
+      "reversible_defect    74\n",
+      "fixed_defect          8\n",
+      "Name: thal, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# categorical values\n",
+    "for col in df_x[categorical_cols].columns:\n",
+    "    print('='*25)\n",
+    "    print(col)\n",
+    "    print(df_x[col].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These data will be one-hot encoded"
    ]
   },
   {
