Updated analysis.ipynb to include 3rd model. Added 3rd model submission script.

--- a/ml_with_a_heart/notebooks/analysis.ipynb
+++ b/ml_with_a_heart/notebooks/analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "import pandas as pd\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.ensemble import AdaBoostClassifier, RandomForestClassifier\n",
+    "from sklearn.feature_selection import chi2\n",
     "from sklearn.gaussian_process import GaussianProcessClassifier\n",
     "from sklearn.gaussian_process.kernels import RBF\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,18 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/alexb/miniconda3/envs/ds/lib/python3.6/site-packages/sklearn/preprocessing/data.py:617: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
+      "/Users/alex/miniconda3/envs/ds/lib/python3.6/site-packages/sklearn/preprocessing/data.py:617: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
       "  return self.partial_fit(X, y)\n",
-      "/home/alexb/miniconda3/envs/ds/lib/python3.6/site-packages/sklearn/base.py:462: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
+      "/Users/alex/miniconda3/envs/ds/lib/python3.6/site-packages/sklearn/base.py:462: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
       "  return self.fit(X, **fit_params).transform(X)\n",
-      "/home/alexb/miniconda3/envs/ds/lib/python3.6/site-packages/ipykernel_launcher.py:4: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
+      "/Users/alex/miniconda3/envs/ds/lib/python3.6/site-packages/ipykernel_launcher.py:4: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
       "  after removing the cwd from sys.path.\n"
      ]
     }
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +388,7 @@
        "4                -0.203768                        0  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +425,7 @@
        "LabelEncoder()"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +608,7 @@
        "4    1  0.449994                -0.203768                        0  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +860,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1097,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,6 +1114,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_x.drop('patient_id', axis=1).values\n",
+    "y = df_y.drop('patient_id', axis=1).values.ravel()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1126,16 +1137,6 @@
    "outputs": [],
    "source": [
     "log_reg = LogisticRegression(random_state=0, solver='liblinear')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df_x.drop('patient_id', axis=1).values\n",
-    "y = df_y.drop('patient_id', axis=1).values.ravel()"
    ]
   },
   {
@@ -1300,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1860,6 +1861,409 @@
     "This second model yielded a log-loss of 0.37185 which is worse than my first submission.\n",
     "\n",
     "I could be overtraining to the data. I should look at metrics other than accuracy to get a handle on how the models are behaving."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GridSearchCV on Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg = LogisticRegression(random_state=rs, solver='liblinear')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_range = [x for x in range(20,30,1)]\n",
+    "param_grid = [{'penalty': ['l1', 'l2'], 'C': param_range, 'random_state': [0]}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8333333333333334\n",
+      "{'C': 26, 'penalty': 'l2', 'random_state': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "gs = GridSearchCV(estimator=log_reg, param_grid=param_grid, scoring='accuracy', cv=10, n_jobs=2)\n",
+    "gs = gs.fit(X, y)\n",
+    "print(gs.best_score_)\n",
+    "print(gs.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic regression is an interpretible model. Train with optimal values and submit\n",
+    "log_reg = LogisticRegression(penalty='l1', C=26, random_state=rs, solver='liblinear')\n",
+    "log_reg.fit(X, y)\n",
+    "X_test = df_x_test.drop('patient_id', axis=1).values\n",
+    "y_pred = log_reg.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_submit = pd.DataFrame(data=df_x_test['patient_id'], columns=['patient_id'])\n",
+    "df_submit['heart_disease_present'] = y_pred[:,1]\n",
+    "df_submit.to_csv('../models/sub_03.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.24669131, -0.20984927, -0.0821394 ,  0.06225919,  0.12041142,\n",
+       "         0.18926129,  0.23480265,  0.59987667,  0.65238486,  0.6838971 ,\n",
+       "         0.8329179 ,  0.99713998,  1.48765387,  1.49893765,  1.6312061 ,\n",
+       "         1.76108179,  2.07076358,  2.29320096,  2.45930589,  2.64368686]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coefs = log_reg.coef_\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results\n",
+    "This third model using logistic regression, yielded a log-loss of 0.3061. This places me at the time of submission at 6."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Investigate statistical tests\n",
+    "## Chi-sq\n",
+    "This will require the original, pre-scaled data so that no number is negative. It also requires either boolean or frequencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_x_chisq = pd.read_csv(DATA_DIR + '/raw/train_values.csv', dtype=dtype_dict)\n",
+    "df_y_chisq = pd.read_csv(DATA_DIR + '/raw/train_labels.csv', dtype=dtype_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# label encode to get integers\n",
+    "df_x_chisq[label_enc_cols] = label_encoder.transform(df_x_chisq[label_enc_cols].values.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_x_chisq.drop('patient_id', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_y_chisq.drop('patient_id', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(chisq, pval) = chi2(df_x_chisq, df_y_chisq)\n",
+    "chisq_dict = {'chisq': chisq, 'pval':pval}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_chisq = pd.DataFrame(data=chisq_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chisq</th>\n",
+       "      <th>pval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.240323</td>\n",
+       "      <td>2.206918e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.458537</td>\n",
+       "      <td>3.633341e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.431004</td>\n",
+       "      <td>1.189567e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.514173</td>\n",
+       "      <td>3.523911e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>43.033600</td>\n",
+       "      <td>5.380778e-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.001724</td>\n",
+       "      <td>9.668792e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3.621429</td>\n",
+       "      <td>5.703987e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>12.703839</td>\n",
+       "      <td>3.649057e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>32.677894</td>\n",
+       "      <td>1.087672e-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6.300403</td>\n",
+       "      <td>1.207105e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5.439368</td>\n",
+       "      <td>1.968780e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>82.127149</td>\n",
+       "      <td>1.276077e-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>24.757895</td>\n",
+       "      <td>6.500201e-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        chisq          pval\n",
+       "0    5.240323  2.206918e-02\n",
+       "1    8.458537  3.633341e-03\n",
+       "2    2.431004  1.189567e-01\n",
+       "3    8.514173  3.523911e-03\n",
+       "4   43.033600  5.380778e-11\n",
+       "5    0.001724  9.668792e-01\n",
+       "6    3.621429  5.703987e-02\n",
+       "7   12.703839  3.649057e-04\n",
+       "8   32.677894  1.087672e-08\n",
+       "9    6.300403  1.207105e-02\n",
+       "10   5.439368  1.968780e-02\n",
+       "11  82.127149  1.276077e-19\n",
+       "12  24.757895  6.500201e-07"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_chisq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chisq</th>\n",
+       "      <th>pval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.240323</td>\n",
+       "      <td>2.206918e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.458537</td>\n",
+       "      <td>3.633341e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.514173</td>\n",
+       "      <td>3.523911e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>43.033600</td>\n",
+       "      <td>5.380778e-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>12.703839</td>\n",
+       "      <td>3.649057e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>32.677894</td>\n",
+       "      <td>1.087672e-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6.300403</td>\n",
+       "      <td>1.207105e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5.439368</td>\n",
+       "      <td>1.968780e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>82.127149</td>\n",
+       "      <td>1.276077e-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>24.757895</td>\n",
+       "      <td>6.500201e-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        chisq          pval\n",
+       "0    5.240323  2.206918e-02\n",
+       "1    8.458537  3.633341e-03\n",
+       "3    8.514173  3.523911e-03\n",
+       "4   43.033600  5.380778e-11\n",
+       "7   12.703839  3.649057e-04\n",
+       "8   32.677894  1.087672e-08\n",
+       "9    6.300403  1.207105e-02\n",
+       "10   5.439368  1.968780e-02\n",
+       "11  82.127149  1.276077e-19\n",
+       "12  24.757895  6.500201e-07"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Null hypothesis is that variables are independent\n",
+    "df_chisq[df_chisq['pval'] < 0.05]"
    ]
   },
   {
